--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - "packages/eko-core"
+  - "packages/eko-electron"
   - "packages/eko-extension"
   - "packages/eko-nodejs"
   - "packages/eko-web"
