--- a/packages/eko-core/package.json
+++ b/packages/eko-core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@eko-ai/eko",
-  "version": "3.1.0",
-  "description": "Empowering language to transform human words into action.",
+  "name": "@jarvis-agent/core",
+  "version": "0.1.2",
+  "description": "A production-ready JavaScript AI Agent framework for creating reliable agents across browser and Node.js environments.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -30,8 +30,14 @@
   "author": "FellouAI",
   "license": "MIT",
   "keywords": [
-    "fellou",
-    "eko"
+    "jarvis",
+    "jarvis-agent",
+    "ai-agent",
+    "automation",
+    "browser-automation",
+    "workflow",
+    "llm",
+    "agent-framework"
   ],
   "publishConfig": {
     "access": "public",
@@ -39,9 +45,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FellouAI/eko.git"
+    "url": "git+https://github.com/yourusername/jarvis-agent.git"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.10",
     "@ai-sdk/provider": "^2.0.0",
     "@ai-sdk/amazon-bedrock": "^3.0.43",
     "@ai-sdk/anthropic": "^2.0.33",
