--- a/packages/eko-electron/package.json
+++ b/packages/eko-electron/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jarvis-agent/nodejs",
-  "version": "0.1.2",
-  "description": "Node.js environment support for Jarvis Agent framework with Playwright integration.",
+  "name": "@jarvis-agent/electron",
+  "version": "0.1.5",
+  "description": "Electron environment support for Jarvis Agent framework with native desktop capabilities.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -20,17 +20,15 @@
     }
   },
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest"
+    "build": "rollup -c"
   },
   "author": "FellouAI",
   "license": "MIT",
   "keywords": [
     "jarvis",
     "jarvis-agent",
-    "nodejs",
-    "playwright",
-    "browser-automation"
+    "electron",
+    "desktop-automation"
   ],
   "publishConfig": {
     "access": "public",
@@ -42,23 +40,21 @@
   },
   "dependencies": {
     "@jarvis-agent/core": "^0.1.2",
-    "chromium-bidi": "^0.12.0",
-    "glob": "^11.0.2",
-    "playwright": "^1.52.0"
+    "glob": "^11.0.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.19",
-    "dotenv": "^16.5.0",
-    "jest": "^29.7.0",
+    "electron": "^33.3.1",
     "rollup": "^4.40.0",
     "rollup-plugin-copy": "^3.5.0",
-    "ts-jest": "^29.3.2",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "electron": ">=20.0.0"
   }
 }
